[package]
name = "cryptohelpers"
version = "0.1.0"
license= "mit"
description = "Collection of helpers and simplifying functions for cryptography things"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = {version = "0.10", optional = true}
pbkdf2 = {version = "0.5", optional = true }
sha2 = {version = "0.9", optional = true }
hmac = {version = "0.9", optional = true }
getrandom = {version = "0.1", optional = true }
crc = {version = "1.8", optional = true }
hex-literal = {version = "0.3", optional = true }
libc = "0.2"
tokio = {version = "0.2", features=["io-util"], optional=true}

[features]
async = ["tokio"]

# Actual things
full = [
     "sha256",
     "password",
     "aes",
     "checksum",
     "rsa"
]

sha256 = ["sha2"]
password = ["sha256", "pbkdf2", "hex-literal", "hmac", "getrandom"]
aes = ["openssl", "getrandom"]
checksum = ["crc"]
rsa = ["openssl", "password"]

[build-dependencies]
rustc_version = "0.2"
